@@ -1,17 +1,17 @@
 package managers;
 
-import static org.junit.jupiter.api.Assertions.*;
-import tasks.Task;
-import tasks.SubTask;
-import tasks.Epic;
-import tasks.Status;
-
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import tasks.Epic;
+import tasks.Status;
+import tasks.SubTask;
+import tasks.Task;
 
-import java.util.ArrayList;
 import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 public class InMemoryTaskManagerTest {
 
@@ -80,7 +80,7 @@ public class InMemoryTaskManagerTest {
     }
 
     @Test
-    public void AfterRemoveTaskByIdMustBeNull() {
+    public void afterRemoveTaskByIdMustBeNull() {
         Task newTask = manager.createTask(new Task("a", "b"));
         Integer expectedId = newTask.getId();
         manager.removeTaskById(expectedId);
@@ -88,16 +88,15 @@ public class InMemoryTaskManagerTest {
     }
 
     @Test
-    public void AfterRemoveEpicByIdMustBeNull() {
+    public void afterRemoveEpicByIdMustBeNull() {
         Epic newEpic = manager.createEpic(new Epic("a", "b"));
-        SubTask created = manager.createSubTask(new SubTask("a1", "b1", newEpic.getId()));
         Integer expectedId = newEpic.getId();
         manager.removeEpicById(expectedId);
         Assertions.assertNull(manager.getEpicById(expectedId));
     }
 
     @Test
-    public void AfterRemoveSubTaskByIdMustBeNull() {
+    public void afterRemoveSubTaskByIdMustBeNull() {
         Epic newEpic = manager.createEpic(new Epic("a", "b"));
         SubTask created = manager.createSubTask(new SubTask("a1", "b1", newEpic.getId()));
         Integer expectedId = created.getId();
@@ -109,6 +108,8 @@ public class InMemoryTaskManagerTest {
     public void afterRemoveAllAllTasksReturnMustBeNull() {
         Task created1 = manager.createTask(new Task("a1", "b1"));
         Task created2 = manager.createTask(new Task("a2", "b2"));
+        Integer numberOfAllTasksBeforeRemove = manager.getAllTasks().size();
+        Assertions.assertEquals(2, numberOfAllTasksBeforeRemove);
         manager.removeAllTasks();
         Integer numberOfAllTasksAfterRemove = manager.getAllTasks().size();
         Assertions.assertEquals(0, numberOfAllTasksAfterRemove);
@@ -118,6 +119,8 @@ public class InMemoryTaskManagerTest {
     public void afterRemoveAllAllEpicsReturnMustBeNull() {
         Epic created1 = manager.createEpic(new Epic("a1", "b1"));
         Epic created2 = manager.createEpic(new Epic("a2", "b2"));
+        Integer numberOfAllEpicsBeforeRemove = manager.getAllEpics().size();
+        Assertions.assertEquals(2, numberOfAllEpicsBeforeRemove);
         manager.removeAllEpics();
         Integer numberOfAllEpicsAfterRemove = manager.getAllEpics().size();
         Assertions.assertEquals(0, numberOfAllEpicsAfterRemove);
@@ -128,6 +131,8 @@ public class InMemoryTaskManagerTest {
         Epic createdEpic = manager.createEpic(new Epic("a1", "b1"));
         SubTask created1 = manager.createSubTask(new SubTask("a1", "b1", createdEpic.getId()));
         SubTask created2 = manager.createSubTask(new SubTask("a2", "b2", createdEpic.getId()));
+        Integer numberOfAllSubTasksBeforeRemove = manager.getAllSubTasks().size();
+        Assertions.assertEquals(2, numberOfAllSubTasksBeforeRemove);
         manager.removeAllSubTasks();
         Integer numberOfAllTasksAfterRemove = manager.getAllSubTasks().size();
         Assertions.assertEquals(0, numberOfAllTasksAfterRemove);
@@ -156,28 +161,6 @@ public class InMemoryTaskManagerTest {
     }
 
     @Test
-    public void updatedSubTaskMustBeDifferWithFirstVersion() {
-        Epic createdEpic = manager.createEpic(new Epic("a1", "b1"));
-        SubTask created = manager.createSubTask(new SubTask("a1", "b1", createdEpic.getId()));
-        SubTask expected = manager.getSubTaskById(created.getId());
-        manager.getSubTaskById(created.getId()).setDescription("c1");
-        manager.updateSubTask(expected);
-        SubTask changed = manager.getSubTaskById(created.getId());
-        Assertions.assertNotEquals(manager.getHistory().getFirst(), changed);
-    }
-    @Test
-    public void updatedEpicMustBeDifferWithFirstVersion() {
-        Epic createdEpic = manager.createEpic(new Epic("a1", "b1"));
-        SubTask createdSubTask1 = manager.createSubTask(new SubTask("a1", "b1", createdEpic.getId()));
-        Epic expected = manager.getEpicById(createdEpic.getId());
-        SubTask createdSubTask2 = manager.createSubTask(new SubTask("a2", "b2", createdEpic.getId()));
-        manager.getEpicById(createdEpic.getId());
-        manager.updateEpic(expected);
-        Epic changed = manager.getEpicById(createdEpic.getId());
-        Assertions.assertNotEquals(manager.getHistory().getFirst(), changed);
-    }
-
-    @Test
     void createdTaskMustBeNotNullAndEqualsByIdAndBeAddedToAlTasks() {
         Task task = new Task("Test addNewTask", "Test addNewTask description");
         final int taskId = manager.createTask(task).getId();
@@ -187,6 +170,6 @@ public class InMemoryTaskManagerTest {
         final List<Task> tasks = manager.getAllTasks();
         assertNotNull(tasks, "Задачи не возвращаются.");
         assertEquals(1, tasks.size(), "Неверное количество задач.");
-        assertEquals(task, tasks.get(0), "Задачи не совпадают.");
+        assertEquals(task, tasks.getFirst(), "Задачи не совпадают.");
     }
 }
